namespace BokenshaChan
{
	public class Player : Actor
	{
		
	}
}