namespace BokenshaChan
{
	public interface IInputHandler
	{
		public void Enable();
		public void Disable();
	}
}